# bazel_react

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bazel_react  bazel-bin  bazel-out  bazel-testlogs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend-react/: BUILD.bazel  package.json
